--- a/ninja_money/templates/index.html
+++ b/ninja_money/templates/index.html
@@ -7,51 +7,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <title>Ninja Gold</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css\style.css' %}"> 
 </head>
 <body>
     <div class="container">
-        <label for="">Your gold: </label>
-        <h3>{{ request.session.gold_amount }}</h3>
+        <div class="row mt-5">
+            <label for="gold" class="col-sm-2">Your gold: </label>
+            <input type="text" class="col-sm-1" placeholder="{{ request.session.gold_amount }}">
+        </div>
     </div>
-    <hr>
     <div class="container">
-        <div class="">
-            <form action="process_money" METHOD="POST">
-                {% csrf_token %}
-                <input type="hidden" name="farm">
-                <button type="submit">Find Gold</button>
-            </form>
-        </div>
-        <div class="">
-            <form action="process_money" METHOD="POST">
-                {% csrf_token %}
-                <input type="hidden" name="cave">
-                <button type="submit">Find Gold</button>
-            </form>
-        </div>
-        <div class="">
-            <form action="process_money" METHOD="POST">
-                {% csrf_token %}
-                <input type="hidden" name="house">
-                <button type="submit">Find Gold</button>
-            </form>
-        </div>
-        <div class="">
-            <form action="process_money" METHOD="POST">
-                {% csrf_token %}
-                <input type="hidden" name="casino">
-                <button type="submit">Find Gold</button>
-            </form>
-        </div>
+        <div class="row text-center my-2">
+            <div class="col box">
+                <h3>Farm</h3>
+                <p>(Ganas 10-20 gold)</p>
+                <form action="process_money" METHOD="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="farm">
+                    <button class="btn btn-primary" type="submit">Find Gold</button>
+                </form>
+            </div>
+            <div class="col box">
+                <h3>Cave</h3>
+                <p>(Ganas 5-10 gold)</p>
+                <form action="process_money" METHOD="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="cave">
+                    <button class="btn btn-primary" type="submit">Find Gold</button>
+                </form>
+            </div>
+            <div class="col box">
+                <h3>House</h3>
+                <p>(Ganas 2-5 gold)</p>
+                <form action="process_money" METHOD="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="house">
+                    <button class="btn btn-primary" type="submit">Find Gold</button>
+                </form>
+            </div>
+            <div class="col box">
+                <h3>Casino</h3>
+                <p>(Ganas/perdes 0-50 gold)</p>
+                <form action="process_money" METHOD="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="casino">
+                    <button class="btn btn-primary" type="submit">Find Gold</button>
+                </form>
+            </div>
+        </div>   
     </div>
     <div class="container actividades">
-        {% for j in request.session.jugadas %}
+        <h6>Actividades:</h6>
+        <div class="col box">
+            {% for j in request.session.jugadas %}
             {% if j.0 < 0 %}
-                <p>Has perdido {{j.0}} oro in {{j.1}} {{j.2}}</p>
+                <p class="text-danger">Has perdido {{j.0}} oro in {{j.1}} {{j.2}}</p>
             {% else %}
-                <p>Has ganado {{j.0}} oro in {{j.1}} {{j.2}}</p>
+                <p class="text-success">Has ganado {{j.0}} oro in {{j.1}} {{j.2}}</p>
             {% endif %}
         {% endfor %}
+        </div>
     </div>
 </body>
 </html>
